# AminoAcidProject

./: .gitignore  AminoAcid.cpp  AminoAcid.h  CMakeLists.txt  ProteinSequence.cpp  ProteinSequence.h  ProteinogenicAminoAcid.cpp  ProteinogenicAminoAcid.h  README.md  tests.cpp
